fixed hamburger menu layout, and footer's boxes gap

--- a/styles.css
+++ b/styles.css
@@ -458,12 +458,12 @@ button {
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    padding: 0.5rem;
     z-index: 1;
     transition: 0.3s ease;
 }
 
 .mobile-nav-links.open {
+    padding: 0.5rem;
     max-height: 300px;
 }
   
@@ -567,6 +567,7 @@ button {
 
     footer .nav-container {
         display: flex;
+        margin-bottom: 2rem;
     }
 
     /* .experience__skills-container {
